--- a/src/Config/user_local.props
+++ b/src/Config/user_local.props
@@ -9,6 +9,7 @@
       <TestOutputPath Condition=" '$(TestOutputPath)' == '' ">$(OutputPath)</TestOutputPath>
    </PropertyGroup>
 	<PropertyGroup Condition="$(Platform.Contains('NET'))">
+      <REVITAPI>C:\DynamoRevit\lib\Revit 2025\net8.0</REVITAPI>
 		<REVITAPI Condition=" !Exists('$(REVITAPI)') ">E:\RevitVersion\2025\Releasex64_NET7_20230907\Releasex64</REVITAPI>
       <REVITAPI Condition=" !Exists('$(REVITAPI)') ">D:\src\git.adsk\revit\Debugx64</REVITAPI>
 	</PropertyGroup>
