--- a/src/Config/CS_SDK.props
+++ b/src/Config/CS_SDK.props
@@ -14,6 +14,8 @@
 		<PACKAGESPATH>$(SolutionDir)packages</PACKAGESPATH>
 		<DynamoExternPath  Condition=" '$(DynamoExternPath)' == '' ">$(SolutionDir)..\extern</DynamoExternPath>
 
+      <RevitAPIPath>$(REVITAPI)</RevitAPIPath>
+
 		<Prefer32Bit>false</Prefer32Bit>
 		<ErrorReport>prompt</ErrorReport>
 		<WarningLevel>4</WarningLevel>
