--- a/src/Libraries/RevitServices/RevitServices.csproj
+++ b/src/Libraries/RevitServices/RevitServices.csproj
@@ -59,13 +59,13 @@ limitations under the License.
 		</Reference>
       <Reference Include="RevitAPI">
          <HintPath>$(RevitAPI)\RevitAPI.dll</HintPath>
-         
          <Private>False</Private>
       </Reference>
       <Reference Include="RevitAPIUI">
          <HintPath>$(RevitAPI)\RevitAPIUI.dll</HintPath>
          <Private>False</Private>
 		</Reference>
+      <PackageReference Include="DynamoVisualProgramming.Core" Version="3.3.1.7726" ExcludeAssets="runtime" />
 		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
 	</ItemGroup>
 	<ItemGroup>
