--- a/src/Libraries/RevitServices/RevitServices.csproj
+++ b/src/Libraries/RevitServices/RevitServices.csproj
@@ -65,10 +65,10 @@ limitations under the License.
          <HintPath>$(RevitAPI)\RevitAPIUI.dll</HintPath>
          <Private>False</Private>
 		</Reference>
-      <Reference Include="DynamoVisualProgramming.Core" Exclude="A">
+      <!--<Reference Include="DynamoVisualProgramming.Core" Exclude="A">
          <HintPath>$(PACKAGESPATH)\DynamoVisualProgramming.Core\lib\net8.0\DynamoCore.dll</HintPath>
          <Private>False</Private>
-      </Reference>
+      </Reference>-->
       <!--<PackageReference Include="DynamoVisualProgramming.Core" Version="3.3.1.7726" ExcludeAssets="runtime" />-->
 		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
 	</ItemGroup>
