--- a/src/Config/user_local.props
+++ b/src/Config/user_local.props
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
    <PropertyGroup>
-      <RevitVersionNumber Condition=" '$(RevitVersionNumber)' == '' ">25.4.10-b025</RevitVersionNumber>
+      <RevitVersionNumber Condition=" '$(RevitVersionNumber)' == '' ">Preview Release</RevitVersionNumber>
       <REVIT_VERSION>Revit</REVIT_VERSION>
       <DYNAMOTESTAPI Condition=" '$(DYNAMOTESTAPI)' == '' ">$(SolutionDir)..\bin\$(Platform)\$(Configuration)</DYNAMOTESTAPI>
 	   <!-- local env -->
