--- a/src/Libraries/RevitServices/RevitServices.csproj
+++ b/src/Libraries/RevitServices/RevitServices.csproj
@@ -21,10 +21,6 @@ limitations under the License.
 		<ProductVersion>8.0.30703</ProductVersion>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	</PropertyGroup>
-   <Target Name="LogREVITAPIPath" BeforeTargets="PreBuildEvent">
-      <Message Text=">> MSBUILD RESOLVED REVITAPI = $(REVITAPI)" Importance="High" />
-      <Exec Command="cmd /c dir &quot;$(REVITAPI)&quot;" />
-   </Target>
 	<PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
 		<DebugSymbols>true</DebugSymbols>
 		<DebugType>full</DebugType>
@@ -58,18 +54,13 @@ limitations under the License.
 			<Private>False</Private>
 		</Reference>
       <Reference Include="RevitAPI">
-         <HintPath>$(RevitAPI)\RevitAPI.dll</HintPath>
+         <HintPath>$(REVITAPI)\RevitAPI.dll</HintPath>
          <Private>False</Private>
       </Reference>
       <Reference Include="RevitAPIUI">
-         <HintPath>$(RevitAPI)\RevitAPIUI.dll</HintPath>
+         <HintPath>$(REVITAPI)\RevitAPIUI.dll</HintPath>
          <Private>False</Private>
 		</Reference>
-      <!--<Reference Include="DynamoVisualProgramming.Core" Exclude="A">
-         <HintPath>$(PACKAGESPATH)\DynamoVisualProgramming.Core\lib\net8.0\DynamoCore.dll</HintPath>
-         <Private>False</Private>
-      </Reference>-->
-      <!--<PackageReference Include="DynamoVisualProgramming.Core" Version="3.3.1.7726" ExcludeAssets="runtime" />-->
 		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
 	</ItemGroup>
 	<ItemGroup>
