--- a/src/Libraries/RevitServices/RevitServices.csproj
+++ b/src/Libraries/RevitServices/RevitServices.csproj
@@ -54,11 +54,11 @@ limitations under the License.
 			<Private>False</Private>
 		</Reference>
       <Reference Include="RevitAPI">
-         <HintPath>$(RevitAPI)\RevitAPI.dll</HintPath>
+         <HintPath>$(REVITAPI)\RevitAPI.dll</HintPath>
          <Private>False</Private>
       </Reference>
       <Reference Include="RevitAPIUI">
-         <HintPath>$(RevitAPI)\RevitAPIUI.dll</HintPath>
+         <HintPath>$(REVITAPI)\RevitAPIUI.dll</HintPath>
          <Private>False</Private>
 		</Reference>
 		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
