--- a/.adsk/ContinuousLocalization.yml
+++ b/.adsk/ContinuousLocalization.yml
@@ -24,7 +24,7 @@ common:
     - name: DynamoRevit
       main_owner: Soft
       content_owner: N/A
-      lang: [csy, deu, esp, fra, ita, jpn, kor, plk, ptb, rus, chs, cht]
+      lang: [csy, deu, esp, fra, ita, jpn, kor, plk, ptb, rus, chs, cht, eng]
       file_rules:
         - doc\distrib\NodeHelpFiles\en-US\fallback_docs\*.md, doc\distrib\NodeHelpFiles\%langMsNet%\fallback_docs\*.md
         - doc\distrib\Templates\en-US\*.dyn, doc\distrib\Templates\%langMsNet%\*.dyn
