--- a/src/Config/CS_SDK.props
+++ b/src/Config/CS_SDK.props
@@ -1,6 +1,6 @@
 <Project>
   <Import Project="$(SolutionDir)Config/user_local.props" />
-  <Import Project="$(SolutionDir)Config/packages_versions.props" />
+   <!-- <Import Project="$(SolutionDir)Config/packages_versions.props" /> -->
   <PropertyGroup>
     <PlatformTarget >x64</PlatformTarget>
     <Prefer32Bit>false</Prefer32Bit>
