--- a/src/Libraries/RevitServices/RevitServices.csproj
+++ b/src/Libraries/RevitServices/RevitServices.csproj
@@ -15,7 +15,8 @@ limitations under the License.
 -->
 <Project Sdk="Microsoft.NET.Sdk">
   <ImportGroup Label="PropertySheets">
-    <Import Project="$(SolutionDir)Config\CS_SDK.props" />
+    <!-- <Import Project="$(SolutionDir)Config\CS_SDK.props" />  -->
+    <Import Project="$(SolutionDir)..\Config\CS_SDK.props" />
   </ImportGroup>
   <PropertyGroup>
     <ProductVersion>8.0.30703</ProductVersion>
