fix casing for platform identifiers in CS_SDK.props

--- a/src/Config/CS_SDK.props
+++ b/src/Config/CS_SDK.props
@@ -2,9 +2,9 @@
 	<Import Project="$(SolutionDir)Config/user_local.props" />
    <Import Project="$(SolutionDir)Config/packages_versions.props" />
 	<PropertyGroup>
-		<Platforms>NET70;NET80</Platforms>
+	<Platforms>NET70;net8.0</Platforms>
 		<PlatformTarget >x64</PlatformTarget>
-		<TargetFramework Condition="'$(Platform)' == 'NET80'">net8.0-windows</TargetFramework>
+	<TargetFramework Condition="'$(Platform)' == 'net8.0'">net8.0-windows</TargetFramework>
 		<TargetFramework Condition="'$(Platform)' == 'NET70'">net7.0-windows</TargetFramework>
 		<TargetFramework Condition="'$(Platform)' == 'NET60'">net6.0-windows</TargetFramework>
 		<TargetFramework Condition="'$(Platform)' == 'net48'">net48</TargetFramework>
@@ -21,7 +21,7 @@
 
 		<DYNAMOTESTAPI Condition=" '$(DYNAMOTESTAPI)' == '' ">C:\Program Files\Dynamo 0.7</DYNAMOTESTAPI>
 
-		<DCoreLibSubFolder Condition="'$(Platform)' == 'NET80'">net8.0</DCoreLibSubFolder>
+	<DCoreLibSubFolder Condition="'$(Platform)' == 'net8.0'">net8.0</DCoreLibSubFolder>
 		<DCoreLibSubFolder Condition="'$(Platform)' == 'NET70'">net6.0</DCoreLibSubFolder>
 		<DCoreLibSubFolder Condition="'$(Platform)' == 'NET60'">net6.0</DCoreLibSubFolder>
 		<REVITAPI Condition=" !Exists('$(REVITAPI)') ">$(SolutionDir)..\lib\Revit $(RevitVersionNumber)\$(DCoreLibSubFolder)</REVITAPI>
