--- a/src/Libraries/RevitNodes/RevitNodes.csproj
+++ b/src/Libraries/RevitNodes/RevitNodes.csproj
@@ -1,4 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+   <PropertyGroup>
+      <TargetFrameworks>net8.0-windows;netstandard2.0</TargetFrameworks>
+   </PropertyGroup>
    <ImportGroup Label="PropertySheets">
       <Import Project="$(SolutionDir)Config\CS_SDK.props" />
    </ImportGroup>
