--- a/src/Libraries/RevitServices/RevitServices.csproj
+++ b/src/Libraries/RevitServices/RevitServices.csproj
@@ -14,6 +14,10 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <Project Sdk="Microsoft.NET.Sdk">
+	<!-- Diagnostic: Print resolved REVITAPI path during build -->
+	<Target Name="PrintRevitApiPath" BeforeTargets="BeforeBuild">
+		<Message Text="[DIAGNOSTIC] REVITAPI=$(REVITAPI)" Importance="High" />
+	</Target>
 	<ImportGroup Label="PropertySheets">
 		<Import Project="$(SolutionDir)Config\CS_SDK.props" />
 	</ImportGroup>
