Update build configuration to support Revit Preview Release for NET80 and adjust restore script to use nuget.exe for package management

--- a/.gitignore
+++ b/.gitignore
@@ -225,3 +225,6 @@ test/SystemInJson
 
 # Icon resources
 /src/DynamoRevitIcons/*.resources
+
+# Revit API DLLs (these should be obtained via the RevitAPI NuGet package)
+lib/*
