Add System.Resources.Extensions reference with HintPath and set Private to true

--- a/src/DynamoRevitIcons/DynamoRevitIcons.csproj
+++ b/src/DynamoRevitIcons/DynamoRevitIcons.csproj
@@ -20,9 +20,10 @@
 	<PropertyGroup>
 		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
 	</PropertyGroup>
-	   <ItemGroup Condition="$(Platform.Contains('NET'))">
+	   <ItemGroup>
 		   <Reference Include="System.Resources.Extensions">
 			   <HintPath>..\packages\System.Resources.Extensions\lib\netstandard2.0\System.Resources.Extensions.dll</HintPath>
+			   <Private>true</Private>
 		   </Reference>
 	   </ItemGroup>
 	<Target Name="BeforeBuildMigrated" BeforeTargets="PreBuildEvent">
