--- a/src/Config/CS_SDK.props
+++ b/src/Config/CS_SDK.props
@@ -23,7 +23,12 @@
 		<DCoreLibSubFolder Condition="'$(Platform)' == 'NET80'">net8.0</DCoreLibSubFolder>
 		<DCoreLibSubFolder Condition="'$(Platform)' == 'NET70'">net6.0</DCoreLibSubFolder>
 		<DCoreLibSubFolder Condition="'$(Platform)' == 'NET60'">net6.0</DCoreLibSubFolder>
-		<REVITAPI Condition=" !Exists('$(REVITAPI)') ">$(SolutionDir)..\lib\Revit $(RevitVersionNumber)\$(DCoreLibSubFolder)</REVITAPI>
+		
+		<!-- For NET80, always use Revit Preview Release/net8.0 -->
+		<REVITAPI Condition="'$(Platform)' == 'NET80'">$(SolutionDir)..\lib\Revit Preview Release\net8.0</REVITAPI>
+		<REVITAPI Condition="'$(Platform)' != 'NET80' and !Exists('$(REVITAPI)')">$(SolutionDir)..\lib\Revit $(RevitVersionNumber)\$(DCoreLibSubFolder)</REVITAPI>
+		
+		<!-- Fallback paths for when the above don't exist -->
 		<REVITAPI Condition=" !Exists('$(REVITAPI)') ">C:\Program Files\Autodesk\Revit Architecture $(RevitVersionNumber)</REVITAPI>
 		<REVITAPI Condition=" !Exists('$(REVITAPI)') ">C:\Program Files\Autodesk\Revit $(RevitVersionNumber)</REVITAPI>
 		<REVITAPI Condition=" !Exists('$(REVITAPI)') ">C:\Program Files\Autodesk\Revit Preview Release</REVITAPI>
