Fix build configuration and dependencies
- Updated CS_SDK.props: Added DCoreLibSubFolder property and enhanced REVITAPI fallback paths for better Revit API resolution
- Updated packages.aget: Synchronized package versions with working configuration (DynamoVisualProgramming.* to 3.6.0.9395, added NUnit.Engine)
- Fixed DynamoRevitIcons.csproj: Replaced PackageReference with explicit Reference for System.Resources.Extensions to ensure proper dependency resolution

--- a/src/DynamoRevitIcons/DynamoRevitIcons.csproj
+++ b/src/DynamoRevitIcons/DynamoRevitIcons.csproj
@@ -21,7 +21,10 @@
 		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="System.Resources.Extensions" Version="5.0.0" />
+		<Reference Include="System.Resources.Extensions">
+			<HintPath>..\packages\System.Resources.Extensions\lib\netstandard2.0\System.Resources.Extensions.dll</HintPath>
+			<Private>true</Private>
+		</Reference>
 	</ItemGroup>
 	<Target Name="BeforeBuildMigrated" BeforeTargets="PreBuildEvent">
 		<GetReferenceAssemblyPaths TargetFrameworkMoniker=".NETFramework, Version=v4.8">
