--- a/test/Libraries/RevitTestServices/RevitTestServices.csproj
+++ b/test/Libraries/RevitTestServices/RevitTestServices.csproj
@@ -53,8 +53,8 @@
   <ItemGroup>
     <PackageReference Include="DynamoVisualProgramming.Tests" Version="$(DYNAMOTESTS_VERSION)" ExcludeAssets="runtime" />
 	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
-	  <PackageReference Include="NUnit" Version="3.13.3" />
-	  <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+	  <PackageReference Include="NUnit" Version="$(NUnit_VERSION)" />
+	  <PackageReference Include="NUnit3TestAdapter" Version="$(NUnit3TestAdapter_VERSION)" />
     <ProjectReference Include="$(SolutionDir)DynamoRevit\DynamoRevit.csproj">
       <Private>False</Private>
     </ProjectReference>
