Fusneif/revit 241567/minimal changes (#3216)
This PR updates the project configuration to support .NET 8.0 framework migration, replacing NET70 framework references with NET80 throughout the build system. The changes focus on updating package restoration, API paths, and dependency management to accommodate the new .NET version.

- Updates framework target from NET70 to NET80 in package restoration
- Configures specific Revit API paths for NET80 builds using Preview Release
- Migrates System.Resources.Extensions from PackageReference to direct assembly reference

--- a/src/Config/CS.props
+++ b/src/Config/CS.props
@@ -13,7 +13,8 @@
 	<DynamoExternPath  Condition=" '$(DynamoExternPath)' == '' ">$(SolutionDir)..\extern</DynamoExternPath>
 	<DYNAMOTESTAPI Condition=" '$(DYNAMOTESTAPI)' == '' ">C:\Program Files\Dynamo 0.7</DYNAMOTESTAPI>
 	<TestOutputPath Condition=" '$(TestOutputPath)' == '' ">$(SolutionDir)..\bin\$(Platform)\$(Configuration)\$(REVIT_VERSION)</TestOutputPath>
-    <REVITAPI Condition=" !Exists('$(REVITAPI)') ">$(SolutionDir)..\lib\Revit $(RevitVersionNumber)\net48</REVITAPI>
+    <REVITAPI Condition=" '$(Platform)' == 'NET80' ">$(SolutionDir)..\lib\Revit $(RevitVersionNumber)\net8.0</REVITAPI>
+    <REVITAPI Condition=" !Exists('$(REVITAPI)') and '$(Platform)' != 'NET80' ">$(SolutionDir)..\lib\Revit $(RevitVersionNumber)\net48</REVITAPI>
     <REVITAPI Condition=" !Exists('$(REVITAPI)') ">C:\Program Files\Autodesk\Revit Architecture $(RevitVersionNumber)</REVITAPI>
     <REVITAPI Condition=" !Exists('$(REVITAPI)') ">C:\Program Files\Autodesk\Revit $(RevitVersionNumber)</REVITAPI>
     <REVITAPI Condition=" !Exists('$(REVITAPI)') ">C:\Program Files\Autodesk\Revit Preview Release</REVITAPI>
