[DynamoRevit] Align package graph and prevent shipping System.Resources.Extensions
- Add "System.Resources.Extensions": "5.0.0" to `src/Config/packages.aget` and `src/Config/packages-template.aget`
- Add explicit Reference to `System.Resources.Extensions` in `src/DynamoRevitIcons/DynamoRevitIcons.csproj`
  - HintPath: `..\packages\System.Resources.Extensions\lib\netstandard2.0\System.Resources.Extensions.dll`
  - <Private>true</Private> to avoid copying the DLL to output
- Bump `Newtonsoft.Json` to 13.0.3 in package files to resolve downgrade warnings

Rationale: Bring D4R2024 dependency resolution in line with D4R2025/D4R2026 so NuGet/aget restores on the Azure agent produce a consistent graph; the explicit private reference prevents the assembly from being shipped (Deploy already strips the file).

--- a/src/DynamoRevitIcons/DynamoRevitIcons.csproj
+++ b/src/DynamoRevitIcons/DynamoRevitIcons.csproj
@@ -40,6 +40,12 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="System.Resources.Extensions">
+      <HintPath>..\packages\System.Resources.Extensions\lib\netstandard2.0\System.Resources.Extensions.dll</HintPath>
+      <Private>true</Private>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
     <None Include="Resources\Revit.Application.Document.GetWorksharingPath.Large.png" />
   </ItemGroup>
   <ItemGroup>
