--- a/src/Config/packages_versions.props
+++ b/src/Config/packages_versions.props
@@ -2,7 +2,7 @@
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
         <!-- 3rd party package versions -->
-        <DYNAMOCORE_VERSION>4.0.0-beta3076</DYNAMOCORE_VERSION>
+        <DYNAMOCORE_VERSION>4.0.0.3277</DYNAMOCORE_VERSION>
 
         <DYNAMOWPFUI_VERSION Condition="'$(DYNAMOWPFUI_VERSION)' == ''">$(DYNAMOCORE_VERSION)</DYNAMOWPFUI_VERSION>
         <DYNAMOCORENODES_VERSION Condition="'$(DYNAMOCORENODES_VERSION)' == ''">$(DYNAMOCORE_VERSION)</DYNAMOCORENODES_VERSION>
@@ -12,8 +12,8 @@
         <DCoreLibSubFolder Condition="'$(Platform)' == 'NET80'">net8.0</DCoreLibSubFolder>
         <DCoreLibSubFolder Condition="'$(Platform)' == 'NET100'">net10.0</DCoreLibSubFolder>
 
-        <Greg_VERSION>3.0.1.4707</Greg_VERSION>
-        <GregRevitAuth_VERSION>4.0.9405.33709</GregRevitAuth_VERSION>
+        <Greg_VERSION>3.0.2.8780</Greg_VERSION>
+        <GregRevitAuth_VERSION>4.0.9460.41744</GregRevitAuth_VERSION>
         <GregRevitAuthLibSubFolder>net10.0</GregRevitAuthLibSubFolder>
 
         <!-- Keep in sync with DynamoCore & TODO: check if still needed -->
