--- a/src/Config/user_local.props
+++ b/src/Config/user_local.props
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-      <!-- temporary path until aligned port to newer .NET 10 SDK build -->
-      <REVITAPI Condition=" !Exists('$(REVITAPI)') ">$(SolutionDir)..\lib\Revit Preview Release\net10.0.0-preview.5.25277.114</REVITAPI>
-      <REVITAPI Condition=" !Exists('$(REVITAPI)') ">D:\src\git.adsk\Revit\dev2\Debugx64</REVITAPI>
+      <REVITAPI Condition=" !Exists('$(REVITAPI)') ">$(SolutionDir)..\lib\Revit Preview Release\net10.0</REVITAPI>
   </PropertyGroup>
 </Project>
